[#9] Feat: 회원 조회 및 권한 요청 수락 및 거절에 대한 기능 구현